# LightBuild

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  NOTICE  README.md
cdef_gen/: hdt-raylib-spine-cdef.2.1.25.lua  hdt-raylib-spine-cdef.3.8.original.lua  hdt-raylib-spine.c  hdt-raylib-spine.ps1  raylib-cdef.lua  raylib.c  raylib.ps1
live2d/core/: readme.txt
live2d/framework/: CMakeLists.txt
live2d/framework/src/Rendering/Raylib/: CubismOffscreenSurface_OpenGLES2.cpp  CubismOffscreenSurface_OpenGLES2.hpp  CubismRenderer_OpenGLES2.cpp  CubismRenderer_OpenGLES2.hpp
live2d/lib/: CMakeLists.txt
live2d/lib/src/: CMakeLists.txt  LAppDelegate.cpp  LAppDelegate.hpp  LAppLive2DManager.cpp  LAppModel.cpp  LAppModel.hpp  LAppPal.cpp  LAppSprite.cpp  LAppSprite.hpp  LAppTextureManager.cpp  LAppTextureManager.hpp  LAppView.cpp  LAppView.hpp  dll.cpp  dll.hpp  main.cpp
llhooks/: CMakeLists.txt  keyboard.c  keyboard.h  mouse.c  mouse.h  test.c  thread.c  thread.h
raylib/: README.txt
spine/2.1.25/: CMakeLists.txt
spine/2.1.25/spine-c/include/spine/: Animation.h  AnimationState.h  AnimationStateData.h  Atlas.h  AtlasAttachmentLoader.h  Attachment.h  AttachmentLoader.h  Bone.h  BoneData.h  BoundingBoxAttachment.h  Event.h  EventData.h  MeshAttachment.h  RegionAttachment.h  Skeleton.h  SkeletonBinary.h  SkeletonBounds.h  SkeletonData.h  SkeletonJson.h  Skin.h  SkinnedMeshAttachment.h  Slot.h  SlotData.h  dll.h
spine/2.1.25/spine-c/src/spine/: MeshAttachment.c  SkeletonBinary.c  SkinnedMeshAttachment.c
spine/3.8/: CMakeLists.txt
spine/3.8/spine-c/include/spine/: dll.h
spine/4.0/spine-c/include/spine/: AnimationStateData.h  spine.h
