set(publish_bin_debug ${CMAKE_CURRENT_SOURCE_DIR}/original_build/x64/bin/debug64)
set(publish_bin_release ${CMAKE_CURRENT_SOURCE_DIR}/original_build/x64/bin/release64)
set(publish_lib_debug ${CMAKE_CURRENT_SOURCE_DIR}/original_build/x64/lib/debug64)
set(publish_lib_release ${CMAKE_CURRENT_SOURCE_DIR}/original_build/x64/lib/release64)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG 	${publish_bin_debug})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE 	${publish_bin_release})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG 	${publish_lib_debug})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RLEASE 	${publish_lib_release})
add_subdirectory(spine/3.8)
add_subdirectory(hdt-raylib-spine)
